--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+<!--Header Section-->
     <header>
         <div class="full-width">
             <div class="half-width">
@@ -17,12 +18,12 @@
             <div class="half-width">
                 <nav>
                     <ul>
-                        <li><a href="about">About</a></li>
-                        <li><a href="menu">Menu</a></li>
-                        <li><a href="locations">Locations</a></li>
-                        <li><a href="gallery">Gallery</a></li>
-                        <li><a href="reviews">Reviews</a></li>
-                        <li><a href="content">Content</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#menu">Menu</a></li>
+                        <li><a href="#locations">Locations</a></li>
+                        <li><a href="#about">Gallery</a></li>
+                        <li><a href="#review">Reviews</a></li>
+                        <li><a href="#about">Content</a></li>
                     </ul>
                 </nav>
             </div>   
@@ -32,12 +33,14 @@
         <section id="fresh-food-image">
             <img src="../img/hero-image.png"/>
         </section>
+<!--About Section-->
         <section id="about">
             <div class="full-width">
                 <h2>Welcome to our little corner of the Internet!</h2>
                 <p>Welcome to Rogue Pickings, the roaming truck bringing you the freshest ingredients and ideas in food.  Our team works hard so you can be sure our ingredients are always fresh and picked carefully.  Our menu changes every day and is made with you in mind.  We can't wait to come to you!<br>Check out our locations to see where you can find us.</br></p>
             </div>
         </section>
+<!--Menu Section-->
         <section id="menu">    
             <div class="full-width">
                 <div class="third-width">
@@ -50,12 +53,14 @@
                 </div>
             </div>    
         </section>   
+<!--Review Section-->
         <section id="review">        
                 <div class="third-width">
                     <h3>OUR AWESOME REVIEWS</h3>
                     <p>"I got so excited about the yumminess of the falafel salad that I am typing this review as I inhale my lunch.  Yes it is that good... Service was super friendly and quick. Can't wait see you Rogue Pickings again tomorrow!"</p>
                 </div>
         </section>
+<!--Location Section-->
         <section id="locations">        
                 <div class="third-width">
                     <h3>CONTACT US</h3>
@@ -66,6 +71,7 @@
                     </ul>
                 </div>
         </section>
+<!--Footer Section-->
         <footer>
             <div class="full-width">
                 <h2 id="tag-line">POWERED BY LOTS OF <span>FRESH</span> INGREDIENTS</h2>
