--- a/index.html
+++ b/index.html
@@ -1,82 +1,72 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>Rogue Pickings</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-<!--Header Section-->
-    <header>
-        <div class="full-width">
-            <div class="half-width">
-                <h1>Rogue <span>Pickings</span></h1>
-            </div>    
-            <div class="half-width">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>Rogue Pickings | Brush Up Those Skills!</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Galada&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <div class="container">
+            <header class="header-container">
+                <h1><span>rogue</span> pickings</h1>
+                <hr>
                 <nav>
                     <ul>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#menu">Menu</a></li>
-                        <li><a href="#locations">Locations</a></li>
-                        <li><a href="#about">Gallery</a></li>
-                        <li><a href="#review">Reviews</a></li>
-                        <li><a href="#about">Content</a></li>
+                        <li>
+                            <a href="">About</a>
+                        </li>
+                        <li>
+                            <a href="">Menu</a>
+                        </li>
+                        <li>
+                            <a href="">Locations</a>
+                        </li>
+                        <li>
+                            <a href="">Gallery</a>
+                        </li>
+                        <li>
+                            <a href="">Reviews</a>
+                        </li>
+                        <li>
+                            <a href="">Contact</a>
+                        </li>
                     </ul>
                 </nav>
-            </div>   
+            </header>
+            <section class="top-section">
+                <div class="main-image"><img src="img/download.jpg" alt="green beans" /></div>
+                <div class="main-title">
+                    <h3>Welcome to our little corner of the internet!</h3>
+                    <p>Welcome to Rogue Pickings, the roaming truck bringing you the freshest ingredients and ideas in food. Our team works hard so you can be sure our ingredients are always fresh and picked carefully. Our menu changes every day and is made with you in mind. We can't wait to come to you! Check out our locations to see where you can find us.</p>
+                </div>
+            </section>
+            <section class="bottom-section">
+                <div class="section-one">
+                    <h4>Today's Specials</h4>
+                    <ul class="menu">
+                        <li>Flaming Hummus &amp; Falafel Salad</li>
+                        <li>Sizzling Bean Burrito</li>
+                        <li>Green Gloves Tamales</li>
+                    </ul>
+                </div>
+                <div class="section-two">
+                    <h4>Our Awesome Reviews</h4>
+                    <p class="reviews">"I got so excited about the yumminess of the falafel salad that I am typing this review as I inhale my lunch. Yes it is that good.... Service was super friendly and quick. Can't wait see you Rogue Pickings again tomorrow!"</p>
+                </div>
+                <div class="section-three"><h4>Contact</h4>
+                    <p class="address">1001 Potrero Avenue<br>
+                        San Francisco, CA 94110<br>
+                        (415) 206-8000 </p>
+                </div>
+            </section>
+            <footer>
+                <h4>Powered by lots of <span>fresh</span> ingredients.</h4>
+            </footer>
         </div>
-    </header>
-    <main>
-        <section id="fresh-food-image">
-            <img src="../img/hero-image.png"/>
-        </section>
-<!--About Section-->
-        <section id="about">
-            <div class="full-width">
-                <h2>Welcome to our little corner of the Internet!</h2>
-                <p>Welcome to Rogue Pickings, the roaming truck bringing you the freshest ingredients and ideas in food.  Our team works hard so you can be sure our ingredients are always fresh and picked carefully.  Our menu changes every day and is made with you in mind.  We can't wait to come to you!<br>Check out our locations to see where you can find us.</br></p>
-            </div>
-        </section>
-<!--Menu Section-->
-        <section id="menu">    
-            <div class="full-width">
-                <div class="third-width">
-                    <h3>TODAY'S SPECIALS</h3>
-                    <ul>
-                        <li><a href="recipes/flaming-hummus-and-falafel-salad">Flaming Hummus &amp; Falafel Salad</a></li>
-                        <li><a href="recipes/sizzling-bean-burrito">Sizzling Bean Burrito</a></li>
-                        <li><a href="recipes/green-gloves-tamales">Green Gloves Tamales</a></li>
-                    </ul>
-                </div>
-            </div>    
-        </section>   
-<!--Review Section-->
-        <section id="review">        
-                <div class="third-width">
-                    <h3>OUR AWESOME REVIEWS</h3>
-                    <p>"I got so excited about the yumminess of the falafel salad that I am typing this review as I inhale my lunch.  Yes it is that good... Service was super friendly and quick. Can't wait see you Rogue Pickings again tomorrow!"</p>
-                </div>
-        </section>
-<!--Location Section-->
-        <section id="locations">        
-                <div class="third-width">
-                    <h3>CONTACT US</h3>
-                    <ul>
-                        <li>1001 Potrero Avenue</li>
-                        <li>San Francisco, CA 94110</li>
-                        <li>(415) 206-8000</li>
-                    </ul>
-                </div>
-        </section>
-<!--Footer Section-->
-        <footer>
-            <div class="full-width">
-                <h2 id="tag-line">POWERED BY LOTS OF <span>FRESH</span> INGREDIENTS</h2>
-            </div>
-        </footer>
-    </main>
-</body>
+    </body>
 </html>
